--- a/templates/header.html
+++ b/templates/header.html
@@ -28,7 +28,7 @@
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item"><a class="nav-link" href="{{ url_for('cafes') }}">Cafes</a></li>
                         <li class="nav-item"><a class="nav-link" href="{{ url_for('login') }}">Login</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#signup">Register</a></li>
+                        <li class="nav-item"><a class="nav-link" href="{{ url_for('register') }}">Register</a></li>
                         <li class="nav-item"><a class="nav-link" href="#signup">Logout</a></li>
                     </ul>
                 </div>
