--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
                     <div class="text-center">
                         <h1 class="mx-auto my-0 text-uppercase">Coffee & Wi-fi</h1>
                         <h2 class="text-white-50 mx-auto mt-2 mb-5">Want to work in a cafe but need power and wi-fi?</h2>
-                        <a class="btn btn-primary" href="{{ url_for('login') }}">Check it Out!</a>
+                        <a class="btn btn-primary" href="{{ url_for('cafes') }}">Check it Out!</a>
                     </div>
                 </div>
             </div>
