--- a/templates/cafes.html
+++ b/templates/cafes.html
@@ -52,7 +52,11 @@
                             {% endfor %}
                           </tbody>
                       </table>
+                        {% if not current_user.is_authenticated %}
                       <p class="text-white-50"><a href="{{ url_for('login') }}">Login</a> or <a href="{{ url_for('register') }}">Register</a> to start contributing today!</p>
+                        {% else %}
+                        <a class="btn btn-primary" href="{{ url_for('cafes') }}">Contribute</a>
+                        {% endif %}
                     </div>
                   </div>
                 </div>
