--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,5 +1,17 @@
-        <!-- Footer-->
-        <footer class="footer bg-black small text-center text-white-50"><div class="container px-4 px-lg-5">Copyright &copy; Brandon Gonzalez {{ year }}</div></footer>
+<section class="contact-section bg-black" style="padding-top: 2rem">
+            <div class="container px-4 px-lg-5">
+                <div class="row gx-4 gx-lg-5">
+                    <div class="social d-flex justify-content-center">
+                        <a class="mx-2" href="https://www.linkedin.com/in/brandon-gonzalez-miguel/"><i class="fab fa-linkedin-in"></i></a>
+                        <a class="mx-2" href="https://github.com/brndngnz"><i class="fab fa-github"></i></a>
+                    </div>
+                </div>
+            </div>
+</section>
+<!-- Footer-->
+        <footer class="footer bg-black small text-center text-white-50">
+                <div class="container px-4 px-lg-5">Copyright &copy; Brandon Gonzalez {{ year }}</div>
+        </footer>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
