--- a/templates/header.html
+++ b/templates/header.html
@@ -31,6 +31,7 @@
                         <li class="nav-item"><a class="nav-link" href="{{ url_for('login') }}">Login</a></li>
                         <li class="nav-item"><a class="nav-link" href="{{ url_for('register') }}">Register</a></li>
                         {% else %}
+                        <li class="nav-item"><a class="nav-link" href="{{ url_for('add_cafe') }}">Contribute</a></li>
                         <li class="nav-item"><a class="nav-link" href="{{ url_for('logout') }}">Logout</a></li>
                         {% endif %}
                     </ul>
