--- a/templates/login.html
+++ b/templates/login.html
@@ -14,7 +14,7 @@
                         <div class="container">
                             <div class="row">
 
-                              <div class="text-white-50 col-lg-8 col-md-10 mx-auto content">
+                              <div class="text-white col-lg-8 col-md-10 mx-auto content">
                                 {% with messages = get_flashed_messages() %}
                                     {% if messages %}
                                       {% for message in messages %}
