--- a/templates/register.html
+++ b/templates/register.html
@@ -2,7 +2,7 @@
 
 {% include "header.html" %}
 
-<header class="login">
+<header class="register">
             <div class="container px-4 px-lg-5 d-flex h-100 align-items-center justify-content-center">
                 <div class="d-flex justify-content-center">
                     <div class="text-center">
@@ -11,7 +11,7 @@
 
                         <div class="container">
                           <div class="row">
-                            <div class="text-white-50 col-lg-8 col-md-10 mx-auto">
+                            <div class="text-white col-lg-8 col-md-10 mx-auto">
                               {% with messages = get_flashed_messages() %}
                                 {% if messages %}
                                   {% for message in messages %}
