--- a/templates/add.html
+++ b/templates/add.html
@@ -11,7 +11,7 @@
 
                         <div class="container">
                           <div class="row">
-                            <div class="text-white-50 col-lg-6 col-md-10 mx-auto">
+                            <div class="text-white col-lg-6 col-md-10 mx-auto">
                               {{ wtf.quick_form(form, novalidate=True, button_map={"submit": "primary"}) }}
                             </div>
                           </div>
